# tips

./: .gitignore  LICENSE  Makefile  README.md  index.html  link-check-config.json
.obsidian/: app.json  workspace
journals/: 2022_12_23.md
logseq/: config.edn  custom.css
no-category/: approx-combination.md
pages/: DOING.md  Tips.md  Today's tip.md  algorithm-vector-index.md  bash.md  c-programming.md  chatGPT-util.md  clang.md  contents.md  deterministic.md  gcc.md  git.md  github-actions.md  github.md  go-programming.md  hash.md  jemalloc.md  logseq-publish-with-giscus.md  logseq-resrouce.md  logseq-tutorial.md  markdown-editor.md  markup languages.md  math-combinatorics.md  math.md  mdbook.md  online-drawing.md  openai.md  playground.md  protobuf.md  pyhton.md  reading.md  rust-programming.md  rust-search-engine.md  rust-serialization.md  rust-unstable-features.md  rust-useful-crate.md  serverless.md  thread local.md  tmux.md  utils.md  (+4 more)
rust-benchmark/: Cargo.toml
rust-benchmark/benches/: vec-push.rs
rust-playground/: Cargo.toml  rust-toolchain
rust-playground/benches/: bench-vec-push.rs
rust-playground/t-cfg/: .gitignore  Cargo.toml
rust-playground/t-cfg/.cargo/: config.toml
rust-playground/t-cfg/src/: main.rs
rust-playground/t-detect-nightly/: Cargo.toml  build.rs
rust-playground/t-detect-nightly/src/: main.rs
rust-playground/t-monoio/: Cargo.toml
rust-playground/t-monoio/src/: main.rs  monoio-main.rs
rust-playground/t-protobuf/: Cargo.toml  build.rs
rust-playground/t-protobuf/proto/: meta.proto
rust-playground/t-protobuf/src/: lib.rs
scripts/: comments.html  img-add-margin.sh
snippet/: README.md
tips/: Assembly register in x86.md  Catalan number proof: generating function.md  Catalan number 卡塔兰数.md  Catalan-number proof: generating function.md  Catalan-number.md  Chebyshev inequality 切比雪夫不等式.md  C语言宏实现循环.md  Derangement 错排.md  Markov inequality 马尔可夫不等式.md  Probability basic.md  Rust Cargo dependency 分类.md  Rust bincode msgpack 向后兼容性比较.md  Rust branchless bsearch.md  Rust branchless heap sort.md  Rust bug.md  Rust detech nightly.md  Rust ref vs ref-keyword.md  Rust sealed trait.md  Rust serde 指定 bound.md  Rust subtyping and variance.md  Rust unstable min_specialization.md  Rust 中 trait 的 lifetime 使用示例.md  Rust 中为泛型实现 trait 时 conflicting implementation 错误的解决方案.md  Rust 中对enum size的优化.md  (+34 more)
(+62 files in other folders)
