[package]
name = "t-protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.30"
tokio = { version = "1.11.0", features = ["full"] }
tonic = "0.10.2"


[build-dependencies]
prost-build = "0.7.0"
tonic-build = "0.10.2"
